agregación  de la etiqueta html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>SENATI</title>
     <link rel="shortcut icon" href="image/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/index.css">
+    <meta name="google-site-verification" content="f71n42iRJ20n-ZybuS_jWJBNw30ifysCzuIpVzUrwfQ" />
 </head>
 
 <body>
