--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="shortcut icon" href="image/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/index.css">
     <meta name="google-site-verification" content="f71n42iRJ20n-ZybuS_jWJBNw30ifysCzuIpVzUrwfQ" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R832GSM39Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-R832GSM39Z');
+</script>
 </head>
 
 <body>
